# open_squeezer

./: .gitignore  CHANGELOG.md  Makefile  README.md  pubspec.yaml
android/app/: build.gradle
android/app/src/debug/: AndroidManifest.xml
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/example/blur_detector/: MainActivity.kt
android/app/src/profile/: AndroidManifest.xml
assets/fonts/: license.txt
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart  router.dart  router.gr.dart
lib/config/: constants.dart
lib/controllers/: home_controller.dart
lib/domain/: album.dart
lib/l10n/: app_en.arb  app_ru.arb
lib/pages/: home.dart  prototype.dart
lib/services/: blur_analyzer.dart  laplacian_analyzer.dart  laplacian_isolate.dart  opencv_ffi.dart
lib/views/: clear_done.dart  home.dart  home_laplacian.dart  home_laplacian_isolate.dart
lib/widgets/: album.dart  button_about.dart  no_permissions.dart  photo_album.dart
linux/: CMakeLists.txt  my_application.cc
macos/Flutter/: GeneratedPluginRegistrant.swift
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
plugins/native_opencv/: README.md  pubspec.yaml
plugins/native_opencv/android/: CMakeLists.txt  build.gradle  conanfile.txt
plugins/native_opencv/example/: pubspec.yaml
plugins/native_opencv/example/android/app/: build.gradle
plugins/native_opencv/example/android/app/src/debug/: AndroidManifest.xml
plugins/native_opencv/example/ios/Runner/: Info.plist
plugins/native_opencv/example/ios/Runner.xcodeproj/: project.pbxproj
plugins/native_opencv/example/lib/: main.dart
plugins/native_opencv/include/libheif/: build_android.sh
plugins/native_opencv/ios/: native_opencv.podspec
plugins/native_opencv/ios/Classes/: native_opencv.cpp
plugins/native_opencv/lib/: native_opencv.dart  native_opencv_platform_interface.dart
plugins/native_opencv/test/: native_opencv_method_channel_test.dart  native_opencv_test.dart
scripts/: init_opencv.sh
test/: widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
